--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -68,10 +68,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<annotationProcessorPaths>
-						<path>
+						<camino>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-						</path>
+						</camino>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
