--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demo
+spring.application.nombre=demo
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://ep-solitary-wind-a5ruyd4e.us-east-2.aws.neon.tech/neondb?sslmode=require
