--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "reactflow": "^11.11.4",
     "ui": "github:shadcn/ui"
   },
   "devDependencies": {
